argocd/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 908442807176.dkr.ecr.us-east-1.amazonaws.com/frontend:41
          ports:
            - containerPort: 80
